; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_config.c_destroy_attr_val_fifo.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_config.c_destroy_attr_val_fifo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@link = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @destroy_attr_val_fifo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy_attr_val_fifo(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %22

6:                                                ; preds = %1
  br label %7

7:                                                ; preds = %16, %6
  %8 = load i32*, i32** %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @link, align 4
  %12 = call i32 @UNLINK_FIFO(i32* %8, i32 %10, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %7
  br label %19

16:                                               ; preds = %7
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @destroy_attr_val(i32* %17)
  br label %7

19:                                               ; preds = %15
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @free(i32* %20)
  br label %22

22:                                               ; preds = %19, %1
  ret void
}

declare dso_local i32 @UNLINK_FIFO(i32*, i32, i32) #1

declare dso_local i32 @destroy_attr_val(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
